--- a/Kustaway/build.gradle
+++ b/Kustaway/build.gradle
@@ -84,6 +84,7 @@ android {
     dexOptions {
         incremental true
     }
+    buildToolsVersion '26.0.2'
 }
 
 if (project.hasProperty('storeFile')) {
