--- a/Kustaway/build.gradle
+++ b/Kustaway/build.gradle
@@ -1,7 +1,16 @@
 apply plugin: 'com.android.application'
+
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'kotlin-kapt'
+
 apply plugin: 'com.neenbedankt.android-apt'
 
 dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
     //noinspection GradleDynamicVersion
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.code.gson:gson:2.4'
