--- a/Kustaway/build.gradle
+++ b/Kustaway/build.gradle
@@ -6,10 +6,40 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
-apply plugin: 'com.neenbedankt.android-apt'
+android {
+    compileSdkVersion 25
+
+    defaultConfig {
+        minSdkVersion 21
+        targetSdkVersion 25
+
+        versionCode 100
+        versionName '1.0.100'
+        applicationId "net.amay077.kustaway"
+    }
+
+    buildTypes {
+        debug {
+            applicationIdSuffix ".debug"
+        }
+
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+}
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile fileTree(include: '*.jar', dir: 'libs')
+
+    annotationProcessor "com.jakewharton:butterknife:${butterKnifeVersion}"
 
     //noinspection GradleDynamicVersion
     compile 'com.android.support:appcompat-v7:23.4.0'
@@ -23,97 +53,5 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.1'
     compile "com.jakewharton:butterknife:${butterKnifeVersion}"
     compile "com.viewpagerindicator:library:${viewpagerIndicatorVersion}"
-    apt "com.jakewharton:butterknife:${butterKnifeVersion}"
     compile 'com.github.chrisbanes.actionbarpulltorefresh:library:0.9.9'
-    compile fileTree(include: '*.jar', dir: 'libs')
 }
-
-android {
-    //noinspection GroovyAssignabilityCheck
-    compileSdkVersion 24
-    //noinspection GroovyAssignabilityCheck
-    buildToolsVersion rootProject.ext.buildToolsVersion
-
-    defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 23
-
-        versionCode 100
-        versionName '1.0.100'
-        applicationId "info.kustaway"
-    }
-
-    signingConfigs {
-        // debug {
-        //     storeFile file("debug.keystore")
-        // }
-        release
-    }
-
-    buildTypes {
-        debug {
-            applicationIdSuffix ".debug"
-
-            // 不具合に気付かないので有効にしておく
-            minifyEnabled false
-            shrinkResources false
-
-            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            return true
-        }
-
-        release {
-            minifyEnabled false
-            shrinkResources false
-
-            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
-            if (project.hasProperty('storeFile')) {
-                //noinspection GroovyAssignabilityCheck
-                signingConfig signingConfigs.release
-            }
-            return true
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
-
-    lintOptions {
-        //checkReleaseBuilds false
-        abortOnError false
-    }
-
-    packagingOptions {
-        exclude 'META-INF/LICENSE.txt'
-    }
-
-    dexOptions {
-        incremental true
-    }
-    buildToolsVersion '26.0.2'
-}
-
-if (project.hasProperty('storeFile')) {
-    android.signingConfigs.release.storeFile = file(storeFile)
-}
-if (project.hasProperty('storePassword')) {
-    android.signingConfigs.release.storePassword = storePassword
-}
-if (project.hasProperty('keyAlias')) {
-    android.signingConfigs.release.keyAlias = keyAlias
-}
-if (project.hasProperty('keyPassword')) {
-    android.signingConfigs.release.keyPassword = keyPassword
-}
-
-allprojects {
-    gradle.projectsEvaluated {
-        tasks.withType(JavaCompile) {
-            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
-        }
-    }
-}
-
