--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ subprojects {
 }
 
 project.ext {
+    supportLibVersion = "25.1.0"
     twitter4jVersion = "4.0.4"
-    butterKnifeVersion = '7.0.1'
+    butterKnifeVersion = "8.5.1"
     viewpagerIndicatorVersion = '2.4.1@aar'
 }
