--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,20 @@ buildscript {
 
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.android.tools.build:gradle:3.0.1'
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -19,6 +28,7 @@ subprojects {
             url "http://dl.bintray.com/populov/maven"
         }
         google()
+        jcenter()
         mavenCentral()
     }
 }
