--- a/Kustaway/build.gradle
+++ b/Kustaway/build.gradle
@@ -7,13 +7,13 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 // https://stackoverflow.com/a/45754564/3309589
-def getFromLocalProperties(file, key) {
-    if (file != null) {
-        Properties properties = new Properties()
-        properties.load(project.rootProject.file(file).newDataInputStream())
-        return properties.getProperty(key);
-    }
-}
+//def getFromLocalProperties(file, key) {
+//    if (file != null) {
+//        Properties properties = new Properties()
+//        properties.load(project.rootProject.file(file).newDataInputStream())
+//        return properties.getProperty(key);
+//    }
+//}
 
 
 android {
@@ -26,22 +26,23 @@ android {
         versionCode 100
         versionName '1.0.100'
         applicationId "net.amay077.kustaway"
+
+        // Twitter のキー:リリース時は CI の環境変数から注入する
+        // https://docs.microsoft.com/en-us/appcenter/build/custom/variables/#buildgradle-for-android
+        buildConfigField "String", "TwitterConsumerKey", "${System.env.TWITTER_CONSUMER_KEY}"
+        buildConfigField "String", "TwitterConsumerSecret", "${System.env.TWITTER_CONSUMER_SECRET}"
     }
 
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
 
-            // Twitter のキー:デバッグ時は local.properties から注入する
-            buildConfigField "String", "TwitterConsumerKey", "\""+getFromLocalProperties('local.properties', 'twitter.consumer_key')+"\""
-            buildConfigField "String", "TwitterConsumerSecret", "\""+getFromLocalProperties('local.properties', 'twitter.consumer_secret')+"\""
+//            // Twitter のキー:デバッグ時は local.properties から注入する
+//            buildConfigField "String", "TwitterConsumerKey", "\""+getFromLocalProperties('local.properties', 'twitter.consumer_key')+"\""
+//            buildConfigField "String", "TwitterConsumerSecret", "\""+getFromLocalProperties('local.properties', 'twitter.consumer_secret')+"\""
         }
 
         release {
-            // Twitter のキー:リリース時は CI の環境変数から注入する
-            // https://docs.microsoft.com/en-us/appcenter/build/custom/variables/#buildgradle-for-android
-            buildConfigField "String", "TwitterConsumerKey", "${System.env.TWITTER_CONSUMER_KEY}"
-            buildConfigField "String", "TwitterConsumerSecret", "${System.env.TWITTER_CONSUMER_SECRET}"
 
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
