--- a/Kustaway/build.gradle
+++ b/Kustaway/build.gradle
@@ -18,11 +18,11 @@ def getFromLocalProperties(file, key) {
 
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
 
         versionCode 101
         versionName '0.5.1'
@@ -71,8 +71,19 @@ dependencies {
     compile ('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2')
             { exclude module: 'support-v4' }
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile fileTree(include: '*.jar', dir: 'libs')
+
+    // Kotlin
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    // Kotlin
+    def coroutines_version = '0.13'
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    // Android Architecture Components
+    implementation 'android.arch.lifecycle:runtime:1.0.3'
+    implementation 'android.arch.lifecycle:extensions:1.0.0'
 
     // App Center
     compile "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
